apps/juxtaposition-ui/webfiles/web/css/web.scss
/* ... */
.message-post-list .dm-banner {
  background: var(--background-alt);
  border: 1px solid var(--btn);
  border-radius: 20px;
  padding: .5rem 1rem;
  margin: 4rem 0 2rem 0;
  text-align: center;

  p {
    color: var(--text-secondary);
  }

  a {
    color: white;
  }
}

.header-button {
	position: fixed;
	bottom: 5%;
	right: 5%;
	width: 60px;
	height: 60px;
	background: var(--btn-secondary);
	color: var(--text);
	font-size: 25px;
	padding: 0;
	z-index: 100;
  }

@include t.media(">=tablet", "<desktop") {
	.communities-wrapper {
		grid-template-columns: repeat(2, minmax(0, 1fr));
		grid-row-gap: 10px;
		grid-column-gap: 10px
	}

	header {
		align-items: center
	}

	header p {
		display: none
	}

	header a {
		padding: .25em .5em .25em .5em
	}
}

@include t.media(">=phone", "<tablet") {
	#main {
		width: 100%;
		margin-bottom: 60px
	}

	.post-content,
	.spoiler-overlay {
		margin-top: .25em;
		margin-left: 2.5em
	}

	.user-icon,
	.user-icon.verified {
		width: 2em;
		height: 2em
	}

	.user-icon.verified {
		border: solid 2px var(--btn)
	}

	.post-buttons-wrapper {
		margin-top: .5em;
		margin-bottom: -.5em;
		margin-left: 2.5em
	}

	header {
		width: 100%;
		margin: 0;
		background: var(--background);
		flex-direction: row;
		justify-content: space-evenly;
		bottom: 0;
		border-top: 1px solid var(--text-secondary);
		z-index: 100;
	}

	header>a:first-child {
		display: none
	}

	header>a:nth-of-type(2) {
		position: fixed;
		top: 2px;
		left: 4px;
		border-radius: 100%;
		width: 3em;
		height: 3em;
		padding: 0;
		justify-content: center;
		z-index: 20
	}

	header>a>p {
		display: none
	}

	header a {
		padding: .25em 1em
	}

	header svg {
		scale: .75
	}

	header>.selected {
		background: var(--background-alt);
		border-radius: 1em;
		font-weight: 700;
		color: var(--theme-light);
		margin: unset
	}

	header>.selected>svg {
		stroke: var(--theme-light)
	}

	#load-more {
		margin-bottom: 1em;
	}

	#title {
		color: var(--text);
		width: 100vw;
		display: flex;
		justify-content: center;
		border-bottom: 1px solid var(--text-secondary);
		padding-top: .5em;
		padding-bottom: .5em;
		position: fixed;
		background: var(--background);
		margin-top: 0;
		z-index: 100;
	}

	.communities-wrapper {
		grid-template-columns: minmax(0, 1fr);
		grid-row-gap: 10px;
		grid-column-gap: 10px
	}

	.notifications-list-content {
		min-height: 4em
	}

	community-info>.user-icon.verified {
		width: 60px;
		height: 60px
	}

	.community-info>.user-icon,
	community-info>.user-icon {
		width: 64px;
		height: 64px
	}

	.info-boxes-wrapper>div {
		width: 100%
	}

	.community-info>.user-icon.verified {
		border: solid 4px var(--btn);
		width: 60px;
		height: 60px
	}

	list-content-with-icon-and-text li.reports>* {
		width: 100%;
		overflow: clip
	}

	li.reports .hover {
		width: auto;
		padding: .5em .25em
	}

	#message-page {
		width: 95%;
	}

	.scroll-focus.mii-icon-container {
		display: none;
	}
	.header-button {
		bottom: 8%;
	  }
}

@include t.media("<tablet") {
  .container.page {
    margin-top: 4rem;
    margin-bottom: 4rem;
  }
  .container.bottom {
    margin-top: 0;
    margin-bottom: 4rem;
  }
}

